@@ -370,7 +370,10 @@ Vue.component('lms-ui-settings', {
             }
         },
         saveAsDefault() {
-            this.$confirm(i18n("Save the current settings as default for new users?"), {buttonTrueText: i18n('Set Defaults'), buttonFalseText: i18n('Cancel')}).then(res => {
+            this.$confirm(i18n("Save the current settings as default for new users?")+
+                                "<br/><br/><p style=\"font-weight:200\">"+
+                                i18n("NOTE: 'Application layout' is not saved, as this is a per-device setting.")+"</p>",
+                          {buttonTrueText: i18n('Set Defaults'), buttonFalseText: i18n('Cancel')}).then(res => {
                 if (res) {
                     var settings = { darkUi:this.darkUi,
                                      artistAlbumSort:this.artistAlbumSort,
