@@ -119,6 +119,7 @@
 "Move to next in queue":"",
 "Music Folder":"",
 "My Music":"",
+"NOTE: 'Application layout' is not saved, as this is a per-device setting.":"",
 "Name":"",
 "New Music":"",
 "No Player":"",
