@@ -56,6 +56,8 @@
 "Delete":"Löschen",
 "Delete '%1'?":"'%1' löschen?",
 "Delete alarm?":"Wecker löschen?",
+"Delete all selected items":"Alle ausgewählten Einträge löschen",
+"Delete the selected items?":"Sollen die ausgewählten Einträge gelöscht werden?",
 "Display technical info":"Technische Informationen anzeigen",
 "Don't know how to handle this!":"Weiss nicht, wie ich das behandeln soll!",
 "Don't shuffle":"Nicht in zufälliger Reihenfolge wiedergeben",
@@ -142,9 +144,11 @@
 "Remote Libraries":"Entfernte Musiksammlungen",
 "Remove":"Entfernen",
 "Remove '%1' from favorites?":"Entferne '%1' aus den Favoriten?",
+"Remove all selected items":"Alle ausgewählten Einträge entfernen",
 "Remove all tracks from queue?":"Aktuelle Wiedergabeliste leeren?",
 "Remove from favorites":"Aus Favoriten entfernen",
 "Remove from queue":"Aus aktueller Wiedergabeliste entfernen",
+"Remove the selected items?":"Sollen di ausgewählten Einträge entfernt werden?",
 "Rename":"Umbenennen",
 "Rename failed":"Umbenennen hat fehlgeschlagen",
 "Rename favorite":"Favorit umbenennen",
@@ -186,6 +190,7 @@
 "Show file type, bitrate, etc.":"Zeige Dateityp, Bitrate etc. an",
 "Show image":"Bild anzeigen",
 "Show information in tabs":"Informationen auf separaten Seiten anzeigen",
+"Show track information":"Titel-Information anzeigen",
 "Show track number":"Titelnummer anzeigen",
 "Show track's album number next to title.":"Zeige die Alben-Nummer neben dem Titel.",
 "Shuffle":"Zufällige Wiedergabe",
@@ -287,22 +292,18 @@
 "Album Mix":"",
 "Audio":"",
 "CD Player":"",
-"Delete all selected items":"Alle ausgewählten Einträge löschen",
-"Delete the selected items?":"Sollen die ausgewählten Einträge gelöscht werden?",
 "Dynamic Playlists":"",
 "Firmware: %1":"",
 "IP: %1":"",
 "Information":"",
 "Logitech Media Server v%1":"",
 "Mon":"",
+"NOTE: 'Application layout' is not saved, as this is a per-device setting.":"",
 "Name":"",
 "OK":"",
 "Player":"",
 "Plugins":"",
 "Radio":"",
-"Remove all selected items":"Alle ausgewählten Einträge entfernen",
-"Remove the selected items?":"Sollen di ausgewählten Einträge entfernt werden?",
-"Show track information":"Titel-Information anzeigen",
 "Start":"",
 "URL":""
 }
