@@ -186,6 +186,7 @@
 "Mix Type":"",
 "Model: %1":"",
 "Music Folder":"",
+"NOTE: 'Application layout' is not saved, as this is a per-device setting.":"",
 "No artist found":"",
 "No fade":"",
 "No repeat":"",
